# dbus-asio

./: .travis.yml  CMakeLists.txt  README.first  README.md  dbus-asio-config.cmake  dbus-asio.pc.in  fix-formatting
.github/workflows/: build-and-test.yml
example/: CMakeLists.txt  dbus-test.cpp
example/tests/: pummel-client.cpp  pummel-server.cpp  pummel-start.sh  validation.cpp
include/: dbus.h  dbus_auth.h  dbus_introspectable.h  dbus_matchrule.h  dbus_messageprotocol.h  dbus_messagestream.h  dbus_native.h  dbus_platform.h  dbus_transport.h  dbus_type.h  dbus_type_array.h  dbus_type_base.h  dbus_type_boolean.h  dbus_type_helpers.h  dbus_type_int16.h  dbus_type_int32.h  dbus_type_objectpath.h  dbus_type_signature.h  dbus_type_struct.h  dbus_type_uint64.h  dbus_utils.h
src/: dbus.h  dbus_auth.cpp  dbus_auth.h  dbus_introspectable.cpp  dbus_introspectable.h  dbus_log.cpp  dbus_log.h  dbus_matchrule.cpp  dbus_matchrule.h  dbus_message.cpp  dbus_message.h  dbus_message_error.cpp  dbus_message_methodcall.cpp  dbus_message_methodreturn.cpp  dbus_message_signal.cpp  dbus_messageistream.cpp  dbus_messageistream.h  dbus_messageostream.h  dbus_messageprotocol.cpp  dbus_messageprotocol.h  dbus_messagestream.h  dbus_native.cpp  dbus_native.h  dbus_native_messages.cpp  dbus_octetbuffer.cpp  dbus_octetbuffer.h  dbus_platform.cpp  dbus_platform.h  dbus_transport.cpp  dbus_transport.h  dbus_type.cpp  dbus_type.h  dbus_type_array.cpp  dbus_type_array.h  dbus_type_base.cpp  dbus_type_base.h  dbus_type_boolean.cpp  dbus_type_boolean.h  dbus_type_byte.cpp  dbus_type_byte.h  (+31 more)
tests/: CMakeLists.txt  dbus_asio_test.cpp  dbus_messageistream_unittest.cpp  dbus_messageostream_unittest.cpp  dbus_messageprotocol_unittest.cpp  dbus_messagestream_unittest.cpp  dbus_octetbuffer_unittest.cpp  dbus_platform_unittest.cpp  dbus_type_array_unittest.cpp  dbus_type_boolean_unittest.cpp  dbus_type_byte_unittest.cpp  dbus_type_dictentry_unittest.cpp  dbus_type_double_unittest.cpp  dbus_type_int16_unittest.cpp  dbus_type_int32_unittest.cpp  dbus_type_int64_unittest.cpp  dbus_type_multiple_unittest.cpp  dbus_type_signature_unittest.cpp  dbus_type_string_unittest.cpp  dbus_type_struct_unittest.cpp  dbus_type_uint16_unittest.cpp  dbus_type_uint32_unittest.cpp  dbus_type_uint64_unittest.cpp  dbus_type_variant_unittest.cpp  dbus_validation_unittest.cpp  test_main.cpp  test_unmarshall.h
